[project]
name = "dsa-coaching-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.12",
    "langchain-core>=1.4.9",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.9",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.1",
]
